INT:Atualizado css e html das páginas.

--- a/pag.css
+++ b/pag.css
@@ -1,25 +1,40 @@
 
             body{
-               background-color:#7f8c8d;
+               background-image: url('Images/bg.png');
             }
 
+	    nav{
+               margin-left:256px;
+               margin-top:50px;
+	    }
+			
+	    li{
+	       color:rgb(290, 186, 94);
+	       text-shadow: 0.1em 0.1em 0.2em black;
+	    }
+				
+			
             p.Nome{
             
                 color:rgb(290, 186, 94);
                 font-size:27px;
                 margin: 10px;
-                margin-bottom: 160px;
+                margin-bottom: 50px;
                 text-shadow: 0.1em 0.1em 0.2em black;
                            
             }
-            nav.LeftMenu{
-                background-color:#95a5a6;            
+
+            .LeftMenu{
+                background-color:rgba(149, 165, 166,0.7);          
                 float:left;
                 text-align:center;
                 vertical-align:middle;
-                height:600px;
-                margin: 2px;
-                
+                height:724px;
+		width:325px;
+		box-shadow: 0px 8px 15px #ccc;
+		border-top-left-radius:2em;
+		border-bottom-left-radius:2em;
+				
             }
             
             a.Links{
@@ -29,32 +44,100 @@
             	font-size: 20px;
             	margin-top: 20px;
                 text-shadow: 0.1em 0.1em 0.2em black;
+		border:none;
             }
 
             a.LinksPers{
             	text-decoration:none;
                 text-align:left;
-                margin-top:40px;
                 text-shadow: 0.1em 0.1em 0.2em black;
+		border:none;
             }
             
             article.Home{
-            	background-color:rgb(169,185,186);
-                height:600px;
+            	background-color:rgba(169,185,186,0.5);
+	        float:left;
+                height:724px;
+		width:695px;
+		box-shadow: 5px 8px 15px #ccc;
+		border-top-right-radius:2em;
+		border-bottom-right-radius:2em;
             }
             
             p.HomeText{
             	color:rgb(280, 196, 84);
                 font-size:18px;
                 text-align:left;
-                margin: 10px;
+                margin-left: 5%;
+                text-shadow: 0.1em 0.1em 0.2em black;
+            }
+			
+	    p.HomeTextTop{
+            	color:rgb(280, 196, 84);
+                font-size:18px;
+                text-align:left;
+                margin-left: 5%;
+		margin-top:30%;
                 text-shadow: 0.1em 0.1em 0.2em black;
             }
             
-            img.image{
+	    .tables{
+		margin-left:15%;
+		margin-right:15%;
+		margin-top:15%;
+				
+	    }
+			
+            .image{
                 height:100px;
                 width:100px;
         
             }
+			
+	    .imageUtil{
+		height:80px;
+	    }
 
+	    tr{
+		height:150px;
+			
+	    }
+			
+	    th{
+		width:200px;
+	    }
+			
+	    .Personal{
+	        background-color:rgba(169,185,186,0.8);
+		float:left;
+                height:724px;
+		width:695px;
+			
+	    }
+			
+	    .quote{
+	        color:rgb(280, 196, 84);
+                font-size:15px;
+                text-align:left;
+                margin-left: 5%;
+                text-shadow: 0.1em 0.1em 0.2em black;
+	     }
+			
+	     .foot{
+	        margin-top:100px;
+			
+	     }
 
+             .footCss{
+                margin-top:300px;
+             }
+			
+	     .pageDefinition{
+		color:rgb(290, 186, 94);
+                font-size:27px;
+                margin: 10px;
+		text-align:center;
+                margin-bottom: 50px;
+                text-shadow: 0.1em 0.1em 0.2em black;
+			
+	     }
