--- a/pag.css
+++ b/pag.css
@@ -3,9 +3,11 @@
                background-image: url('Images/bg.png');
             }
 
-			nav{
-				   margin-left:50px;
-				   margin-right:50px;
+			menu{
+				   left:50%;
+				   margin-left:-512px;
+                                   margin-bottom:20px;
+                                   position:absolute;
 			}
 				
 			li{
