--- a/pag.css
+++ b/pag.css
@@ -70,6 +70,7 @@
                 font-size:18px;
                 text-align:left;
                 margin-left: 5%;
+                margin-right:5%;
                 text-shadow: 0.1em 0.1em 0.2em black;
             }
 			
